# eece4632

./: README.md  README.txt  base_detection.ipynb  blur_edge_combined.cpp  blur_edge_combined.h  blur_edge_combined_tb.cpp  draw_cube_video.ipynb  drawcube3.py  edge_detection_hls.cpp  gaussian.tcl  gaussian_blur_hls.cpp  gaussian_blur_hls.h  gaussian_blur_tb.cpp  one_loop.cpp  one_loop.h  sw_detection.ipynb  video_to_frames.py  video_to_matrices.ipynb  zynq_blur_edge_combined.ipynb  zynq_gaussian_blur.ipynb
.claude/: settings.local.json
Hardware/: gaussian_blur_tb.cpp
edge_detection_hls/: edge_detection_hls.cpp  edge_detection_hls.h  edge_detection_tb.cpp
gaussian_blur_hls/: gaussian.hwh  gaussian.tcl
parallelismhandoff/: blur_edge.hwh  blur_edge.tcl
parallelismhls/.wsdata/: clang_dir_map.json
parallelismhls/parallelism/: compile_commands.json  hls_config.cfg  vitis-comp.json
parallelismhls/parallelism/parallelism/: parallelism.hlscompile_summary  parallelism.hlsrun_package_summary
parallelismhls/parallelism/parallelism/hls/: config.cmdline  hls_data.json
parallelismhls/parallelism/parallelism/reports/: v++_compile_parallelism_guidance.html
parallelismvivado/parallelism/: parallelism.xpr
parallelismvivado/parallelism/parallelism.cache/wt/: synthesis.wdf
parallelismvivado/parallelism/parallelism.gen/sources_1/bd/design_1/ip/design_1_blur_edge_0_0/drivers/blur_edge_v1_0/src/: CMakeLists.txt  xblur_edge_hw.h
parallelismvivado/parallelism/parallelism.runs/.jobs/: vrs_config_1.xml  vrs_config_2.xml
software/: drawcube3.py
(+666 files in other folders)
